Fix padding on main-section. Change z-index on widget.

--- a/products-trade/css/products-page.css
+++ b/products-trade/css/products-page.css
@@ -1670,7 +1670,6 @@ MAIN TITLE
   right: 5px;
 }
 #product-pages #search {
-  margin-top: 30px;
   position: relative;
 }
 #product-pages #search:before,
@@ -2165,7 +2164,7 @@ MAIN TITLE
 }
 @media (min-width: 768px) {
   #product-pages .main-section.widget {
-    padding-top: 30px;
+    padding-top: 25px;
     padding-right: 50px;
   }
 }
@@ -2187,7 +2186,7 @@ MAIN TITLE
 #product-pages #shopping-cart-widget {
   background: #066693;
   will-change: transform;
-  z-index: 2;
+  z-index: 10;
   position: absolute;
   top: 0;
   left: 0;
@@ -8935,8 +8934,10 @@ MAIN TITLE
 #product-pages .main-section#products-landing .articles {
   margin-bottom: 30px;
 }
-#product-pages .main-section#products-landing .articles.with-icon {
-  padding-top: 60px;
+@media (min-width: 768px) {
+  #product-pages .main-section#products-landing .articles.with-icon {
+    padding-top: 60px;
+  }
 }
 #product-pages .main-section#products-landing .articles .article {
   margin-bottom: 30px;
