--- a/products-trade/less/products-page/components/_search.less
+++ b/products-trade/less/products-page/components/_search.less
@@ -1,5 +1,4 @@
 #search{
-	margin-top: 30px;
 	position: relative;
 	.clearfix();
 	input{
