--- a/products-trade/less/products-page/components/_shopping-cart-widget.less
+++ b/products-trade/less/products-page/components/_shopping-cart-widget.less
@@ -92,7 +92,7 @@
 		padding-top: 71px;
 		padding-right: 0;
 		@media (min-width: @screen-sm){
-			padding-top: 30px;
+			padding-top: 25px;
 			padding-right: 50px;
 		}
 		@media (min-width: @screen-md){
@@ -111,7 +111,7 @@
 #shopping-cart-widget{
 	background: @widget-content-bg;
 	will-change: transform;
-	z-index: 2;
+	z-index: 10;
 	position: absolute;
 	top: 0;
 	left: 0;
