--- a/products-trade/less/products-page/pages/_products-landing.less
+++ b/products-trade/less/products-page/pages/_products-landing.less
@@ -130,7 +130,9 @@
 	.articles{
 		margin-bottom: 30px;
 		&.with-icon{
-			padding-top: 60px;
+			@media (min-width: @screen-sm){
+				padding-top: 60px;
+			}
 		}
 		.article{
 			margin-bottom: 30px;			
